# deimos

./: ;  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: build-install-protoc.yml  release.yml
deimos-client/: Cargo.toml  build.rs
deimos-client/src/: app.rs  context.rs  main.rs
deimos-client/src/app/: config.rs  container.rs  header.rs  loader.rs  mod.rs  orbit.rs  settings.rs  sidebar.rs
deimos-client/src/app/auth/: mod.rs
deimos-client/src/app/cview/: mod.rs
deimos-client/src/app/over/: header.rs  mod.rs
deimos-client/src/app/pview/: logs.rs  mod.rs
deimos-client/src/app/style/: application.rs  button.rs  container.rs  input.rs  mod.rs  orbit.rs  rule.rs  scrollable.rs  svg.rs  tabs.rs  text.rs  text_input.rs
deimos-client/src/app/widget/: button.rs  input.rs  mod.rs  svg.rs
deimos-client/src/context/: container.rs  load.rs  mod.rs  pod.rs
deimos-client/src/context/authentication/: dpapi.rs  mod.rs
deimos-client/src/context/client/: mod.rs
deimos-client/src/context/client/auth/: dpapi.rs  mod.rs
deimos-client/src/context/client/layer/: auth.rs  cancel.rs  conn.rs  mod.rs
deimos-client/src/context/layer/: conn.rs
deimos-client/wix/: main.wxs
deimos-shared/: Cargo.toml  build.rs
deimos-shared/proto/: deimos.proto  query.proto  status.proto  update.proto
deimos-shared/src/: header.rs  key.rs  lib.rs  util.rs
deimosctl/: Cargo.toml
deimosctl/src/: main.rs
deimosd/: Cargo.toml
deimosd/debian/: deimosd.service
deimosd/src/: config.rs  logger.rs  main.rs  server.rs  util.rs
deimosd/src/pod/: config.rs  id.rs  mod.rs  state.rs
deimosd/src/pod/docker/: disable.rs  enable.rs  events.rs  logs.rs  mod.rs  pause.rs
deimosd/src/pod/manager/: config.rs  mod.rs
deimosd/src/pod/state/: handle.rs
deimosd/src/server/: conn.rs  docker.rs  upnp.rs
deimosd/src/server/api/: auth.rs  grpc.rs  mod.rs  persist.rs
deimosd/src/server/api/auth/: grpc.rs  issue.rs  mod.rs  token.rs
deimosd/src/server/docker/: container.rs  mod.rs  state.rs
deimosd/src/server/docker/container/: config.rs  id.rs  mod.rs
deimosd/src/server/upnp/: mod.rs
deimosd/src/services/: api.rs  mod.rs  valheim.rs
deimosd/src/services/docker/: container.rs  mod.rs
deimosproto/: Cargo.toml  build.rs
deimosproto/proto/: auth.proto  container.proto  deimos.proto  img.proto  internal.proto  pod.proto  query.proto  status.proto  update.proto
deimosproto/src/: auth.rs  lib.rs  util.rs
