[workspace]
resolver = "2"
members = [
    "deimosd",
    "deimos-shared",
    "deimos-client"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

chacha20poly1305 = "0.10"
pem = "3.0"

[workspace.dependencies.tokio]
version = "1.40"
