[workspace]
resolver = "2"
members = [
    "deimosd",
    "deimos-shared",
    "deimos-client"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

chrono = { version = "0.4" }
mime = "0.3"

[workspace.dependencies.tokio]
version = "1.40"

[workspace.dependencies.tonic]
version = "0.12"
default-features = false
features = ["codegen", "tls", "prost"]
