[workspace]
resolver = "2"
members = [
    "deimosd",
    "deimosproto",
    "deimos-client"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-subscriber = "0.3"

chrono = { version = "0.4" }
mime = "0.3"

[workspace.dependencies.tokio]
version = "1.40"

[workspace.dependencies.tonic]
version = "0.12"
default-features = false
features = ["codegen", "prost", "tls", "tls-webpki-roots"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
