[package]
name = "deimos-client"
version = "0.1.0"
edition = "2021"

[dependencies]
deimosproto = { path = "../deimosproto", features = ["channel"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }

tonic = { workspace = true, features = ["channel"] }
http = "1.1"
http-serde = "2.1"

serde = { workspace = true }
serde_json = "1.0"
dirs = "5.0"
thiserror = "1.0"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
mime = { workspace = true }

slotmap = { version = "1.0", features = ["serde"] }

[dependencies.iced]
version = "0.13"
features = ["tokio", "image", "svg", "debug"]

[dependencies.iced_aw]
version = "0.11"
features = ["spinner"]
