[package]
repository = "https://github.com/bendi11/deimos.git"
name = "deimos-client"
description = "Client for the Deimos container manager"
authors = ["bkliebmann@gmail.com"]

version = "1.1.8"
edition = "2021"

[package.metadata.wix]
upgrade-guid = "6BFD387F-BD04-402C-9F03-809131A40CCD"
path-guid = "A3713B66-DC0E-407B-A192-9C4A082129CE"
license = false
eula = false
product-icon = "deimos-client/assets/icon.ico"

[dependencies]
deimosproto = { path = "../deimosproto", features = ["channel"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
async-stream = "0.3"
futures = "0.3"
pin-project = "1.1"

tonic = { workspace = true, features = ["channel"] }
http = "1.1"
http-serde = "2.1"
tower = "0.5"

serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }

dirs = "5.0"
hostname = "0.4"
thiserror = "1.0"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

arraydeque = "0.5"
once_cell = "1.20"

windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
]


[dependencies.fltk]
version = "1.4"

[build-dependencies]
winresource = "0.1"
