[package]
name = "deimos-shared"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
channel = ["tonic/channel"]
server = ["tonic/server"]

[dependencies]
tonic = { workspace = true, features = ["codegen", "prost"] }
prost = "0.13"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
