[package]
name = "deimos-shared"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tonic = { version = "0.12", default-features = false, features = ["codegen", "tls", "prost"] }
prost = "0.13"

thiserror = "1.0"

[features]
channel = ["tonic/channel"]
server = ["tonic/server"]

[build-dependencies]
tonic-build = "0.12"
