[package]
name = "deimosctl"
version = "1.1.7"
edition = "2021"
dist = false

[dependencies]
clap =  { version = "4.5", features = ["derive"] }
deimosproto = { path = "../deimosproto", features = ["channel"] }

tonic = { workspace = true }
tower = "0.4"
hyper-util = "0.1"

chrono = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
