[package]
name = "deimosd"
authors = ["Ben"]
version = "0.1.0"
edition = "2021"
license = "none"

[dependencies]
deimosproto = { path = "../deimosproto", features = ["server"] }
tonic = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
fork_stream = "0.1"
tokio-util = "0.7"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
pin-project = "1.1"

igd-next = { version = "0.15", features = ["aio_tokio"] }

bollard = "0.17"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = "0.8"
dashmap = "6.1"
zeroize = { version = "1.8", features = ["derive"] }

chrono = "0.4"
local-ip-address = "0.6"

[package.metadata.deb]
maintainer-scripts = "debian"
systemd-units = { enable = true }
