[package]
name = "deimosd"
authors = ["Ben"]
version = "0.1.0"
edition = "2021"
license = "none"
dist = false

[dependencies]
deimosproto = { path = "../deimosproto", features = ["server"] }
tonic = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros", "signal"] }
fork_stream = "0.1"
tokio-util = "0.7"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
dashmap = { version = "6.0", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
pin-project = "1.1"


igd-next = { version = "0.15", features = ["aio_tokio"] }

bollard = "0.17"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
bytes = "1.8"
serde_bytes = "0.11"

chrono = { workspace = true }
local-ip-address = "0.6"

rand = "0.8"

[package.metadata.dist]
dist = false
